1.7.0 RC5
        pid with spaces causes issues in web admin GUI
          (http://www.packetfence.org/mantis/view.php?id=315)

1.7.0 RC4
        usage of gettext and template-toolkit in web pages
        pfcmd_vlan -reAssignVlan
          (https://support.inverse.ca/mantis/view.php?id=2341)
        replaced HTTP auth with form based authentication
        setVlan on Linksys switches
          (http://www.packetfence.org/mantis/view.php?id=307)
        added autodiscover script
        added sample iptables.pre configuration file to allow
          reception of SNMP traps
        show database and scan passwords in password fields in 
          web admin GUI
        fixed issue in node_cleanup SQL query
        added missing test/connect_and_read.pl script
        support for Cisco::WLC_2106

1.7.0 RC3
        setting configuration parameters back to default values
          (http://www.packetfence.org/mantis/view.php?id=313)
        = sign in configuration values
          (https://support.inverse.ca/mantis/view.php?id=2265)

1.7.0 RC2
        Some reports (Active/InActive) do not have DHCP fingerprint
          information (http://www.packetfence.org/mantis/view.php?id=4)
        pfcmd always connects to MySQL
          (http://www.packetfence.org/mantis/view.php?id=101)
        can't close blocks in administration/configuration.php
          (http://www.packetfence.org/mantis/view.php?id=122)
        admin/screenshots
          (http://www.packetfence.org/mantis/view.php?id=125)
        in UI if var/session doesn't exist or is not writable - user 
          can not login and no error is given
          (http://www.packetfence.org/mantis/view.php?id=140)
        class/violation.php
          (http://www.packetfence.org/mantis/view.php?id=169)
        make packetfence.init LSB compliant
          (http://www.packetfence.org/mantis/view.php?id=170)
        allow to configure alert email through pf.conf
          (http://www.packetfence.org/mantis/view.php?id=174)