@@ -4,7 +4,7 @@
   </head>
   <body>
   <font
-  <img src="/common/packetfence.gif">
+  <img src="/common/packetfence.png">
   <p><b><font size=+1>Configuration Reference - arp</font></b></p>
 <a name=cleanshutdown></a>
 <b>cleanshutdown</b> <i>(toggle)</i><br>
