@@ -4,7 +4,7 @@
   </head>
   <body>
   <font
-  <img src="/common/packetfence.gif">
+  <img src="/common/packetfence.png">
   <p><b><font size=+1>Configuration Reference - expire</font></b></p>
 <a name=iplog></a>
 <b>iplog</b> <i>(time)</i><br>
