@@ -4,7 +4,7 @@
   </head>
   <body>
   <font
-  <img src="/common/packetfence.gif">
+  <img src="/common/packetfence.png">
   <p><b><font size=+1>Configuration Reference - general</font></b></p>
 <a name=caching></a>
 <b>caching</b> <i>(toggle)</i><br>
@@ -33,6 +33,6 @@ Default: en_US<br>
 Locale used for message translation.<p>
 <a name=logo></a>
 <b>logo</b> <i>(text)</i><br>
-Default: /common/packetfence.gif<br>
+Default: /common/packetfence.png<br>
 Logo displayed on web pages.<p>
 </body></html>
