@@ -4,7 +4,7 @@
   </head>
   <body>
   <font 
-  <img src="/common/packetfence.gif">
+  <img src="/common/packetfence.png">
   <p><b><font size=+1>Configuration Reference</font></b></p>
 <p><b>[alerting]</b><br>
   <a href='alerting.html#admin_netbiosname'>admin_netbiosname</a><br>
