@@ -4,7 +4,7 @@
   </head>
   <body>
   <font
-  <img src="/common/packetfence.gif">
+  <img src="/common/packetfence.png">
   <p><b><font size=+1>Configuration Reference - logging</font></b></p>
 <a name=facility></a>
 <b>facility</b> <i>(text)</i><br>
