@@ -4,7 +4,7 @@
   </head>
   <body>
   <font
-  <img src="/common/packetfence.gif">
+  <img src="/common/packetfence.png">
   <p><b><font size=+1>Configuration Reference - registration</font></b></p>
 <a name=aup></a>
 <b>aup</b> <i>(toggle         )</i><br>
