@@ -4,7 +4,7 @@
   </head>
   <body>
   <font
-  <img src="/common/packetfence.gif">
+  <img src="/common/packetfence.png">
   <p><b><font size=+1>Configuration Reference - scan</font></b></p>
 <a name=host></a>
 <b>host</b> <i>(text)</i><br>
